service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    kubectl.kubernetes.io/last-applied-configuration: |
      {"apiVersion":"v1","kind":"Service","metadata":{"annotations":{},"labels":{"app.kubernetes.io/component":"controller","app.kubernetes.io/instance":"ingress-nginx","app.kubernetes.io/managed-by":"Helm","app.kubernetes.io/name":"ingress-nginx","app.kubernetes.io/version":"0.33.0","helm.sh/chart":"ingress-nginx-2.4.0"},"name":"ingress-nginx-controller","namespace":"ingress-nginx"},"spec":{"externalTrafficPolicy":"Local","ports":[{"name":"http","port":80,"protocol":"TCP","targetPort":"http"},{ [...]
    service.kubernetes.io/loadbalance-id: lb-0zkdunhm
  creationTimestamp: "2020-06-14T17:44:48Z"
  labels:
    app.kubernetes.io/component: controller
    app.kubernetes.io/instance: ingress-nginx
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/name: ingress-nginx
    app.kubernetes.io/version: 0.33.0
    helm.sh/chart: ingress-nginx-2.4.0
  name: ingress-nginx-controller
  namespace: ingress-nginx
  resourceVersion: "3324951239"
  selfLink: /api/v1/namespaces/ingress-nginx/services/ingress-nginx-controller
  uid: 79954643-1334-458d-bd8f-5012d12ea78e
spec:
  clusterIP: 172.16.255.117
  externalTrafficPolicy: Local
  healthCheckNodePort: 32467
  ports:
  - name: http
    nodePort: 31085
    port: 80
    protocol: TCP
    targetPort: http
  - name: https
    nodePort: 30033
    port: 443
    protocol: TCP
    targetPort: https
  selector:
    app.kubernetes.io/component: controller
    app.kubernetes.io/instance: ingress-nginx
    app.kubernetes.io/name: ingress-nginx
  sessionAffinity: None
  type: LoadBalancer
status:
  loadBalancer:
    ingress:
    - ip: 129.226.99.30
